// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`use.scss - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
@use "@fylgja/base" with (
  $family-main: (
  Rubik,
    Roboto,
    system-ui,
    sans-serif,
  ),
  $font-weight: 350,
  $h1-font-weight: 500,
  $h2-font-weight: 500,
  $h3-font-weight: 500
);

@use 'library' with (
  $black: #222,
  $border-radius: 0.1rem
);

=====================================output=====================================
@use "@fylgja/base" with (
  $family-main: (
    Rubik,
    Roboto,
    system-ui,
    sans-serif
  ),
  $font-weight: 350,
  $h1-font-weight: 500,
  $h2-font-weight: 500,
  $h3-font-weight: 500
);

@use "library" with (
  $black: #222,
  $border-radius: 0.1rem
);

================================================================================
`;

exports[`use.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@use "@fylgja/base" with (
  $family-main: (
  Rubik,
    Roboto,
    system-ui,
    sans-serif,
  ),
  $font-weight: 350,
  $h1-font-weight: 500,
  $h2-font-weight: 500,
  $h3-font-weight: 500
);

@use 'library' with (
  $black: #222,
  $border-radius: 0.1rem
);

=====================================output=====================================
@use "@fylgja/base" with (
  $family-main: (
    Rubik,
    Roboto,
    system-ui,
    sans-serif,
  ),
  $font-weight: 350,
  $h1-font-weight: 500,
  $h2-font-weight: 500,
  $h3-font-weight: 500
);

@use "library" with (
  $black: #222,
  $border-radius: 0.1rem
);

================================================================================
`;
